import SwiftUI

enum AlbumScope: String, CaseIterable, Identifiable {
    case all = "All"
    case shared = "Shared"

    var id: Self {
        self
    }
}

...
